Don't log started on info/debug/warn levels

--- a/build.gradle
+++ b/build.gradle
@@ -224,13 +224,13 @@ test {
         // showStandardStreams = true
         exceptionFormat="full"
 
-        debug.events = ["skipped", "failed", "started"]
+        debug.events = ["skipped", "failed"]
         debug.exceptionFormat="full"
 
-        info.events = ["failed", "skipped", "started"]
+        info.events = ["failed", "skipped"]
         info.exceptionFormat="full"
         
-        warn.events = ["failed", "skipped", "started"]
+        warn.events = ["failed", "skipped"]
         warn.exceptionFormat="full"
     }
 
