--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
   ext.bintrayVersion = "1.7.3"
   ext.jfrogExtractorVersion = "4.5.2"
   ext.bndVersion = "4.2.0"
+  ext.checkstyleVersion = "6.19"
 
   // --------------------------------------
 
@@ -308,7 +309,7 @@ build.dependsOn jacocoTestReport
 checkstyle {
     configFile file("checkstyle.xml")
     ignoreFailures = true
-    toolVersion ="6.19" 
+    toolVersion = checkstyleVersion
 }
 
 if (rootProject.hasProperty("releaseMode")) {
