3.x: enable javac parameter saving in class files

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     testImplementation "com.google.guava:guava:$guavaVersion"
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters";
+}
+
 javadoc {
     failOnError = false
     exclude "**/internal/**"
