adding tool version for formatter

--- a/build.gradle
+++ b/build.gradle
@@ -379,3 +379,8 @@ if (rootProject.hasProperty("releaseMode")) {
 }
 
 apply from: file("gradle/javadoc_cleanup.gradle")
+
+tasks.verifyGoogleJavaFormat.ignoreFailures = true
+googleJavaFormat {
+    toolVersion = '1.1'
+}
