--- a/.github/workflows/gradle_release.yml
+++ b/.github/workflows/gradle_release.yml
@@ -5,9 +5,10 @@ name: Release
 
 on:
   release:
+    types: [ released ]
     branches: [ '3.x' ]
     tags:
-      - 'v3.*.*'
+      - 'v3.*.*'   
 
 jobs:
   build:
