--- a/.github/workflows/gradle_release_docs.yml
+++ b/.github/workflows/gradle_release_docs.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Release
+name: Release JavaDocs
 
 on:
   release:
@@ -17,10 +17,6 @@ jobs:
     env:
       # Define secrets at https://github.com/ReactiveX/RxJava/settings/secrets/actions
       # ------------------------------------------------------------------------------ 
-      bintrayUser: ${{ secrets.BINTRAY_USER }}
-      bintrayKey: ${{ secrets.BINTRAY_KEY }}
-      sonatypeUsername: ${{ secrets.SONATYPE_USER }}
-      sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
       JAVADOCS_TOKEN: ${{ secrets.JAVADOCS_TOKEN }}
       # ------------------------------------------------------------------------------ 
       CI_BUILD_NUMBER: ${{ github.run_number }}
@@ -43,6 +39,6 @@ jobs:
     - name: Extract version tag
       run: echo "BUILD_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
     - name: Build and Release
-      run: ./gradlew -PreleaseMode=full -PbintrayUser="${bintrayUser}" -PbintrayKey="${bintrayKey}" -PsonatypeUsername="${sonatypeUsername}" -PsonatypePassword="${sonatypePassword}" build --stacktrace
-    - name: Upload to Codecov  
-      uses: codecov/codecov-action@v1
+      run: ./gradlew assemble javadoc --stacktrace
+    - name: Push Javadocs
+      run: ./push_javadoc.sh
