Migrate Gradle to use Java Toolchain
Use Gradle java toolchain functionality, instead of relying on JAVA_HOME
version used to run the Gradle instance. Remove target and compatibility
Java versions properties. Make the Java version configurable in gradle.properties
with default version set to 8.

Fix bug where GitHub JDK11 Action was using Java 8 due to hardcoded
target/compatibility properties of 1.8.

--- a/.github/workflows/gradle_jdk11.yml
+++ b/.github/workflows/gradle_jdk11.yml
@@ -29,6 +29,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build PR
-      run: ./gradlew -PreleaseMode=pr build --stacktrace
-    #- name: Upload to Codecov  
-    #  uses: codecov/codecov-action@v1
+      run: ./gradlew -PreleaseMode=pr -PtoolchainJavaVersion=11 build --stacktrace
