Add full module descriptor

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id("com.github.hierynomus.license") version "0.16.1"
     id("biz.aQute.bnd.builder") version "5.3.0"
     id("com.vanniktech.maven.publish") version "0.17.0"
+    id("org.beryx.jar") version "1.2.0"
 }
 
 ext {
@@ -29,6 +30,15 @@ if (releaseTag != null && !releaseTag.isEmpty()) {
 
     logger.lifecycle("Releasing with version: " + project.version)
 }
+
+
+group = "io.reactivex.rxjava3"
+version = project.properties["VERSION_NAME"]
+description = "RxJava: Reactive Extensions for the JVM – a library for composing asynchronous and event-based programs using observable sequences for the Java VM."
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+ext.javaCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
@@ -93,10 +103,11 @@ jar {
             "Import-Package": "!org.junit,!junit.framework,!org.mockito.*,!org.testng.*,*",
             "Bundle-DocURL": "https://github.com/ReactiveX/RxJava",
             "Eclipse-ExtensibleAPI": "true",
-            "Automatic-Module-Name": "io.reactivex.rxjava3",
             "Export-Package": "!io.reactivex.rxjava3.internal.*, io.reactivex.rxjava3.*",
             "Bundle-SymbolicName": "io.reactivex.rxjava3.rxjava"
     )
+
+    moduleInfoPath = 'src/main/module/module-info.java'
 }
 
 license {
