3.x: Inject prebuilt module-info.class for Module support

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ animalsniffer {
 }
 
 jar {
+    bnd('-fixupmessages': '^Classes found in the wrong directory: \\\\{META-INF/versions/9/module-info\\\\.class=module-info}$')
     bnd(
             "Bundle-Name": "rxjava",
             "Bundle-Vendor": "RxJava Contributors",
