Exclude the module java file from checkstyle

--- a/build.gradle
+++ b/build.gradle
@@ -178,6 +178,7 @@ checkstyle {
             "checkstyle.header.file"      : project.file("config/license/HEADER_JAVA")
     ]
 }
+checkstyleMain.exclude = '**/src/main/module/**'
 
 if (project.hasProperty("releaseMode")) {
     logger.lifecycle("ReleaseMode: {}", project.releaseMode)
